# drf-doc-demo

./: .gitignore  README.md  pyproject.toml
drf_doc_demo/: manage.py
drf_doc_demo/api/: custom_schema.py  serializers.py  urls.py  views.py
drf_doc_demo/drf_doc_demo/: asgi.py  urls.py  wsgi.py
drf_doc_demo/drf_doc_demo/settings/: __init__.py  production.py
drf_doc_demo/drf_doc_demo/templates/: swagger-ui.html
